k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: member-service
  namespace: member-service
spec:
  selector:
    app: member-service
  ports:
    - name: http
      port: 80
      targetPort: http
